--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "agency",
+  "name": "bcagency",
   "title": "Agency",
   "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/agency",
+  "homepage": "http://startbootstrap.com/template-overviews/bcagency",
   "author": "Start Bootstrap",
   "license": {
     "type": "MIT",
@@ -23,6 +23,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+    "url": "https://github.com/BlackrockDigital/startbootstrap-bcagency.git"
   }
 }
